# osl

./: .gitignore  PHASE1_COMPLETE.md  README.md  V1.md  V3 Core.md  V3 Decision History.md  osl_config.yaml
.claude/statuslines/: statusline.sh
ai_state/: coach_state.json
anki/: deck_config.json  sync_log.json
docs/: OSL_AI_Boundaries.md  OSL_Activation_Probe.md  OSL_Automation_Spec.md  OSL_Concept_Map_Implementation.md  OSL_Document_Organization.md  OSL_Flashcard_Philosophy.md  OSL_Gap_Analysis_Report.md  OSL_Governance_Standards.md  OSL_Guardrails_Checklist.md  OSL_Implementation_Summary.md  OSL_Infrastructure_Spec.md  OSL_Interleaving_Specification.md  OSL_Master_Reference_Guide.md  OSL_Natural_Language_Balance.md  OSL_Parsing_Framework.md  OSL_Reconciliation_Summary.md  OSL_State_Schema.md  OSL_User_Interaction_Guide.md  OSL_Validation_Framework.md  README.md  V3_Core.md  V3_Decision_History.md  V3_Implementation_Guide.md
docs/archived/: OSL_Gap_Analysis_Report.md
osl-cli/: README.md  pyproject.toml
osl-cli/osl_cli/: __init__.py  main.py
osl-cli/osl_cli/ai/: __init__.py
osl-cli/osl_cli/commands/: __init__.py  book.py  flashcard.py  governance.py  init.py  metrics.py  microloop.py  misconception.py  questions.py  quiz.py  review.py  session.py  state.py  synthesis.py
osl-cli/osl_cli/governance/: __init__.py  gates.py
osl-cli/osl_cli/state/: __init__.py  manager.py  migration.py  schemas.py
osl-cli/osl_cli/validation/: __init__.py  hash.py  workflow.py
osl-cli/tests/: test_state.py
scripts/: brief_coach.py  update_coach_state.py
(+21 files in other folders)
